--- a/src/layout/Dashboard/components/style.scss
+++ b/src/layout/Dashboard/components/style.scss
@@ -1,17 +1,15 @@
 @use "../../../shared/styles/main.scss" as *;
 
 
-//! ----- Dynamic Styles -----
+//! ----- Dynamic Reusable Styles -----
 
 .mobil-menu-title {
-    color: red;
     width: 100%;
     padding: 15px 10px;
     margin-top: -12px;
     font-size: 24px;
     color: var(--text-dark-gray);
 }
-
 
 .search-input-box {
     @include flex-center(row, flex-start, center);
@@ -69,6 +67,8 @@
     }
 }
 
+//! ----- Main Styles -----
+
 .user-dashboard-card-box,
 .group-dashboard-card-box {
     margin-top: 15px;
@@ -79,7 +79,6 @@
     cursor: pointer;
     @include transition();
     border-radius: 17px;
-
 
     @include screen(900px) {
         margin-top: 0px;
@@ -96,7 +95,6 @@
             gap: 0px;
             @include flex-center(column, center, center);
 
-            // Flex çocuk elemanların sırasını değiştir
             div:first-child {
                 order: 2;
             }
@@ -287,7 +285,6 @@
     }
 }
 
-
 .chat-list-box,
 .call-list-box,
 .archive-list-box,
@@ -318,7 +315,6 @@
         }
     }
 }
-
 
 .call-list-box,
 .archive-list-box {
