--- a/src/shared/components/MessageBubble/style.scss
+++ b/src/shared/components/MessageBubble/style.scss
@@ -10,14 +10,9 @@
         width: 100%;
         gap: 10px;
         height: max-content;
-
         opacity: 0;
-        /* Başlangıç opaklığı */
         transform: translateY(45px);
         animation: slideUpFadeIn 0.2s ease forwards;
-        /* Animasyonu uygula */
-
-
 
         .image-box {
             img {
@@ -243,10 +238,8 @@
         font-size: 17px;
         color: var(--text-input-gray);
         opacity: 0;
-        /* Başlangıç opaklığı */
         transform: translateY(45px);
         animation: slideUpFadeIn 0.2s ease forwards;
-        /* Animasyonu uygula */
     }
 
     .full-size-image-box {
@@ -259,18 +252,17 @@
         height: 100%;
         background-color: rgba(28, 28, 28, 0.768);
         backdrop-filter: blur(4px);
-        opacity: 0; // Başlangıçta görünmez
-        animation: fadeIn 0.3s forwards; // Animasyon ekledik
+        opacity: 0;
+        animation: fadeIn 0.3s forwards;
         z-index: 9999;
-
 
         img {
             max-width: 80%;
             max-height: 85%;
             border-radius: 13px;
-            transform: translateY(50px); // Başlangıç pozisyonu (50px aşağıda)
-            opacity: 0; // Başlangıçta görünmez
-            animation: slideUp 0.7s ease-out forwards; // Animasyonu uygula
+            transform: translateY(50px);
+            opacity: 0;
+            animation: slideUp 0.7s ease-out forwards;
         }
 
         button {
@@ -291,24 +283,14 @@
 @keyframes slideUpFadeIn {
     0% {
         opacity: 0;
-        /* Görünmez */
         transform: translateY(40px);
-        /* Aşağıda başla */
     }
 
     100% {
         opacity: 1;
-        /* Görünür */
         transform: translateY(0);
-        /* Yukarı çık */
     }
 }
-
-
-// Component Styles
-
-//! Audio Message Styles
-
 
 .audio-player {
     background-color: var(--smooth-light-blue);
@@ -351,7 +333,6 @@
             }
         }
     }
-
 }
 
 .custom-slider {
