Optimized Images with Webp extension.
Uninstalled react-lazy-load-image

--- a/src/shared/components/MinglePreLoader/style.scss
+++ b/src/shared/components/MinglePreLoader/style.scss
@@ -9,6 +9,8 @@
     @include flex-center(column, center, center);
 
     img {
+        width: 240px;
+
         @include screen(768px) {
             width: 200px;
         }
