--- a/src/shared/styles/base/appColors.scss
+++ b/src/shared/styles/base/appColors.scss
@@ -14,6 +14,7 @@
   --text-dark-gray: #4E4E4E;
   --text-input-gray: #828A96;
   --text-white: rgb(252, 252, 252);
+  --ai-text-color: rgb(51, 51, 51);
 
   --smooth-white-color: #F9F9F9;
   --smooth-border-color: #EAEAEA;
@@ -32,10 +33,12 @@
   --smooth-blue-hover: #222430;
   --smooth-light-blue: #262832;
 
+
   --text-black: #f1f1f1;
   --text-dark-gray: #A5A5A5;
   --text-input-gray: #B0B0B0;
   --text-white: rgb(33, 33, 33);
+  --ai-text-color: rgb(231, 231, 231);
 
   --smooth-white-color: #161616;
   --smooth-border-color: #1b1b1b;
