--- a/src/shared/components/AIModal/style.scss
+++ b/src/shared/components/AIModal/style.scss
@@ -117,14 +117,19 @@
             @include flex-center(row, center, flex-start);
 
             .banner {
-                @include flex-center(row, center, center);
+                @include flex-center(column, center, center);
 
                 width: 100%;
                 height: 100%;
 
                 img {
                     width: 130px;
+                }
 
+                span {
+                    font-size: 14px;
+                    margin-top: 20px;
+                    color: var(--mingle-red);
                 }
             }
 
