--- a/src/shared/components/AIModal/style.scss
+++ b/src/shared/components/AIModal/style.scss
@@ -317,6 +317,53 @@
 
 
             }
+
+            .change-ai-model-btn {
+                border-radius: 10px;
+                padding: 8px;
+                font-size: 24px;
+                margin-right: 7px;
+                color: var(--blue);
+                background-color: var(--smooth-light-blue);
+                @include transition();
+
+                &:active {
+                    scale: 0.8;
+                }
+            }
+
+            .model-selection-box {
+                position: relative;
+
+                .model-selection {
+                    @include flex-center(column, center, center);
+                    background-color: var(--smooth-light-blue);
+                    border-radius: 12px;
+                    padding: 7px;
+                    width: 120px;
+                    position: absolute;
+                    top: -146px;
+                    padding-bottom: 0;
+
+
+
+                    .model-option {
+                        margin-bottom: 8px;
+                        padding: 5px;
+                        border-radius: 6px;
+                        cursor: pointer;
+                        width: 100%;
+                        background-color: var(--generalBackgroundColor);
+                        color: var(--blue);
+                        font-size: 14px;
+
+                        &.selected-model {
+                            background-color: var(--blue);
+                            color: white;
+                        }
+                    }
+                }
+            }
         }
     }
 }
