--- a/src/shared/styles/base/modal.scss
+++ b/src/shared/styles/base/modal.scss
@@ -73,5 +73,6 @@
     justify-content: center;
     align-items: center;
     border-radius: 18.5px;
-    background: #585CE1;
+    background: #E8EBFD;
+    color: #4a4ed8;
 }
