Update copyright year and improve chat background color definitions

--- a/src/shared/components/MessageInputBar/style.scss
+++ b/src/shared/components/MessageInputBar/style.scss
@@ -20,7 +20,7 @@
         @include transition();
 
         &:hover {
-            background-color: var(--cardHover);
+            background-color: var(--smooth-white-color);
         }
 
         @include screen(900px) {
