--- a/src/pages/Sign/style.scss
+++ b/src/pages/Sign/style.scss
@@ -6,6 +6,7 @@
     flex-direction: row;
     width: 100%;
     height: 100vh;
+    border: 2px solid red;
 }
 
 .sign-bar,
@@ -31,25 +32,25 @@
         width: 100%;
     }
 
-    @include screenHeight(700px) {
-        scale: 0.7;
-    }
+    // @include screenHeight(700px) {
+    //     scale: 0.7;
+    // }
 
-    @include screen(768px) {
-        scale: 0.9;
-        height: max-content;
-        padding: 10px 0px;
-    }
+    // @include screen(768px) {
+    //     scale: 0.9;
+    //     height: max-content;
+    //     padding: 10px 0px;
+    // }
 
-    @include screen(355px) {
-        width: 100%;
-        scale: 0.8;
-    }
+    // @include screen(355px) {
+    //     width: 100%;
+    //     scale: 0.8;
+    // }
 
-    @include screen(164px) {
-        width: 100%;
-        scale: 0.4;
-    }
+    // @include screen(164px) {
+    //     width: 100%;
+    //     scale: 0.4;
+    // }
 }
 
 .banner-bar {
