--- a/src/pages/Sign/style.scss
+++ b/src/pages/Sign/style.scss
@@ -6,6 +6,7 @@
     flex-direction: row;
     width: 100%;
     height: 100vh;
+    border: 2px solid blue;
 
 
     @include screen(920px) {
@@ -20,6 +21,11 @@
     justify-content: center;
     align-items: center;
     height: auto;
+
+    @include screen(920px) {
+        padding: 0px 10px 0px 10px;
+
+    }
 
     p {
         user-select: none;
@@ -317,10 +323,12 @@ form {
     z-index: 2;
     padding: 20px 40px;
     height: 100%;
+    border: 2px solid red;
 
 
     @include screen(768px) {
         @include flex-center(column, center, center);
+        padding: 15px;
     }
 
     @include screen(450px) {
