--- a/src/shared/styles/base/modal.scss
+++ b/src/shared/styles/base/modal.scss
@@ -16,6 +16,7 @@
     @media (max-width:768px) {
         display: flex;
         align-items: start;
+        height: auto;
     }
 }
 
@@ -41,8 +42,9 @@
     background-color: var(--generalBackgroundColor);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.104);
 
+
     @media (max-width:768px) {
-        height: 100%;
+        height: 100vh;
         max-height: 100%;
         max-width: 100%;
         width: 100%;
