--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -76,9 +76,9 @@
                 height: 100%;
 
                 .user-name,
-                .grup-name {
+                .group-name {
                     color: var(--text-black);
-                    font-weight: 800;
+                    font-weight: 700;
                     font-size: 15px;
                 }
 
