--- a/src/layout/Dashboard/style.scss
+++ b/src/layout/Dashboard/style.scss
@@ -39,19 +39,32 @@
     }
 
     .dynamic-list-box {
+        position: relative;
         width: 100%;
         height: 100%;
         overflow: hidden;
         background-color: var(--smooth-white-color);
         margin-top: 15px;
         border-radius: 28px 28px 0px 0px;
-        padding: 16px 12px;
+        padding: 16px 12px 0px 12px;
 
         @include screen(900px) {
             margin-top: 0px;
             border-radius: 0;
+            margin-bottom: 70px;
+            padding-bottom: 0;
             background-color: var(--generalBackgroundColor);
         }
 
+        &::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 50px;
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, var(--generalBackgroundColor) 100%);
+            pointer-events: none;
+        }
     }
 }
