--- a/src/components/Groups/Components/NewAndSettingsGroup/style.scss
+++ b/src/components/Groups/Components/NewAndSettingsGroup/style.scss
@@ -96,17 +96,20 @@
                     height: 100%;
                     background-color: rgba(28, 28, 28, 0.768);
                     backdrop-filter: blur(4px);
-                    opacity: 0; // Başlangıçta görünmez
-                    animation: fadeIn 0.3s forwards; // Animasyon ekledik
+                    opacity: 0;
+                    animation: fadeIn 0.3s forwards;
 
 
                     img {
-                        height: 80%;
-                        width: auto;
+                        width: max-content;
+                        height: max-content;
+                        max-width: 85%;
+                        max-width: 85%;
+
                         border-radius: 13px;
-                        transform: translateY(50px); // Başlangıç pozisyonu (50px aşağıda)
-                        opacity: 0; // Başlangıçta görünmez
-                        animation: slideUp 0.7s ease-out forwards; // Animasyonu uygula
+                        transform: translateY(50px);
+                        opacity: 0;
+                        animation: slideUp 0.7s ease-out forwards;
                     }
 
                     button {
