--- a/src/components/Groups/Components/NewAndSettingsGroup/style.scss
+++ b/src/components/Groups/Components/NewAndSettingsGroup/style.scss
@@ -98,6 +98,7 @@
                     backdrop-filter: blur(4px);
                     opacity: 0;
                     animation: fadeIn 0.3s forwards;
+                    z-index: 99999999999;
 
 
                     img {
@@ -312,6 +313,7 @@
         background-color: rgba(39, 39, 39, 0.173);
         backdrop-filter: blur(2px);
 
+
         .card {
             width: 600px;
             border: 1px solid #ccc;
@@ -322,7 +324,7 @@
             border: 4px solid var(--smooth-blue-hover);
             background-color: var(--smooth-white-color);
             max-height: 600px;
-            z-index: 55500;
+
 
             @media (max-width:768px) {
                 max-height: 100%;
