--- a/src/components/Settings/style.scss
+++ b/src/components/Settings/style.scss
@@ -11,8 +11,6 @@
         flex: 1;
         height: auto;
         height: 100%;
-
-
     }
 
     @include screen(359px) {
@@ -186,8 +184,6 @@
             padding: 15px 0px 0px 15px;
             width: 20px;
 
-
-
             @include screen(359px) {
                 width: 100%;
                 @include flex-center(column, flex-start, center);
@@ -209,7 +205,8 @@
 
 
                 @include screen(600px) {
-                    height: 100%;
+                    height: 0px;
+                    min-height: 100%;
                     padding-right: 10px;
                 }
 
@@ -431,15 +428,13 @@
                 color: var(--text-black);
 
                 @include screen(768px) {
-
-                    height: 100%;
+                    height: 0px;
+                    min-height: 100%;
                 }
 
                 h3 {
                     margin-bottom: 0;
                 }
-
-
 
                 .edit-btn {
                     background-color: var(--text-white);
@@ -455,7 +450,6 @@
                     width: 100%;
                     position: relative;
                     width: max-content;
-
 
                     .profile-image {
                         width: 90px;
@@ -482,7 +476,6 @@
                         backdrop-filter: blur(4px);
                         opacity: 0;
                         animation: fadeIn 0.3s forwards;
-
 
                         img {
                             max-height: 80%;
@@ -514,7 +507,6 @@
                     padding-bottom: 10px;
                     border-bottom: 1px solid var(--smooth-light-blue);
 
-
                     p {
                         font-size: 16px;
                         width: 270px;
@@ -532,7 +524,6 @@
                         p {
                             margin: 3px 0px;
                             font-size: 16px;
-
                         }
 
                         span,
