--- a/src/shared/components/SoundRecordModal/style.scss
+++ b/src/shared/components/SoundRecordModal/style.scss
@@ -2,10 +2,12 @@
 
 .sound-record-box {
     width: 100%;
+    @include flex-center(column, center, center);
     height: 100%;
 
     .sound-record-content {
         width: 400px;
+        @include flex-center(column, center, center);
         height: 100%;
 
         .content-box {
@@ -17,7 +19,6 @@
 
         @include screen(768px) {
             width: 100%;
-            height: 100%;
         }
 
         .record-finished-box {
@@ -91,6 +92,10 @@
             width: 100%;
             @include flex-center(row, center, center);
 
+            @include screen(768px) {
+                @include flex-center(column, center, center);
+            }
+
             .record-button {
                 padding: 5px 10px;
                 border-radius: 7px;
@@ -117,6 +122,11 @@
             @include flex-center(row, center, center);
             gap: 22px;
 
+            @include screen(768px) {
+                width: 100%;
+                @include flex-center(column, center, center);
+            }
+
             button {
                 color: var(--blue);
                 width: 90px;
@@ -127,10 +137,10 @@
 
                 @include screen(768px) {
                     @include flex-center(row, center, center);
-                    padding: 12px 24px;
+                    padding: 10px;
                     height: auto;
-                    width: 100px;
-                    border-radius: 30px;
+                    width: 60%;
+                    border-radius: 10px;
                 }
 
                 &:first-child {
