--- a/src/components/Calls/Components/CallModal.scss
+++ b/src/components/Calls/Components/CallModal.scss
@@ -103,6 +103,7 @@
                 border: 3px solid var(--smooth-light-blue);
                 transition: all 0.7s ease;
 
+
             }
 
             &.remote-connected {
@@ -154,15 +155,16 @@
             video {
                 width: 100%;
                 max-width: 100%;
-                height: auto;
+                max-height: 400px;
                 border-radius: 20px;
                 border: 4px solid var(--smooth-light-blue);
                 object-fit: cover;
 
                 @include screen(768px) {
                     position: initial;
-                    height: 90%;
-                    width: auto;
+
+                    max-width: 70%;
+                    max-height: 100%;
                 }
             }
 
