--- a/src/shared/styles/base/reset.scss
+++ b/src/shared/styles/base/reset.scss
@@ -85,12 +85,11 @@ button {
   outline: none;
 }
 
-
-
-button:active {
+bu button:active {
   outline: none;
   -webkit-tap-highlight-color: transparent;
 }
+
 
 a:focus,
 button:focus,
