--- a/src/components/Settings/style.scss
+++ b/src/components/Settings/style.scss
@@ -728,7 +728,7 @@
 }
 
 .error-messages {
-    color: var(--mingle-red);
+    color: var(--ChatNest-red);
     font-size: 13.5px;
     margin: -10px 0px;
 }
