--- a/src/pages/Sign/style.scss
+++ b/src/pages/Sign/style.scss
@@ -384,7 +384,7 @@ form {
     }
 
     .error-message {
-        color: var(--mingle-red);
+        color: var(--ChatNest-red);
         font-size: 13px;
         margin: -10px 0px;
     }
