--- a/src/shared/components/AIModal/style.scss
+++ b/src/shared/components/AIModal/style.scss
@@ -129,7 +129,7 @@
                 span {
                     font-size: 14px;
                     margin-top: 20px;
-                    color: var(--mingle-red);
+                    color: var(--ChatNest-red);
                 }
             }
 
