--- a/src/shared/styles/base/appColors.scss
+++ b/src/shared/styles/base/appColors.scss
@@ -6,7 +6,7 @@
   --smooth-blue-hover: #c7cdf0;
   --smooth-light-blue: #E8EBFD;
 
-  --mingle-red: #f94c4c;
+  --ChatNest-red: #f94c4c;
   --smooth-red: #EB6262;
   --smooth-light-red: #fbe5e5;
 
