--- a/src/components/Calls/Components/CallModal.scss
+++ b/src/components/Calls/Components/CallModal.scss
@@ -1,261 +1,255 @@
 @use "../../../shared/styles/main.scss" as *;
 
 .call-modal {
-    @include flex-center(column, space-between, center);
-    width: 560px;
-    height: 560px;
+  @include flex-center(column, space-between, center);
+  width: 560px;
+  height: 560px;
+  position: relative;
+
+  @include screen(768px) {
+    width: 100%;
+    height: 100%;
+  }
+
+  .logo-and-e2e-box {
+    width: 100%;
+    @include flex-center(row, space-between, center);
+    z-index: 2;
+
+    img {
+      width: 100px;
+    }
+
+    .e2e-box {
+      @include flex-center(row, center, center);
+      gap: 4px;
+      color: #a4a4a4;
+      font-size: 12px;
+    }
+  }
+
+  .user-and-call-time-box {
+    width: 100%;
+    @include flex-center(column, center, center);
+    gap: 6px;
+
+    img {
+      width: 90px;
+      height: 90px;
+      border-radius: 50%;
+      object-fit: cover;
+      transition: all 0.7s ease;
+    }
+
+    p {
+      color: var(--blue);
+      font-size: 20px;
+      font-weight: 700;
+    }
+
+    span {
+      color: var(--text-input-gray);
+      font-size: 15px;
+    }
+
+    &.cameraCall {
+      img {
+        width: 70px;
+        height: 70px;
+      }
+
+      p {
+        font-size: 19px;
+      }
+
+      span {
+        font-size: 14px;
+      }
+    }
+  }
+
+  .camera-bar {
+    width: 96%;
+    height: 100%;
+    @include flex-center(row, center, center);
     position: relative;
+    flex-grow: 1;
+    min-height: 20%;
 
     @include screen(768px) {
-        width: 100%;
+      @include flex-center(column, center, space-between);
+      width: 100%;
+      flex: 1;
+    }
+
+    &.only-voice-call {
+      height: 0%;
+      display: none;
+    }
+
+    .device-camera-box {
+      width: 65%;
+      border-radius: 40px;
+      z-index: 3;
+      opacity: 0;
+      animation: fadeIn 1.5s ease-in-out forwards;
+      height: auto;
+
+      video {
         height: 100%;
-    }
-
-    .logo-and-e2e-box {
         width: 100%;
-        @include flex-center(row, space-between, center);
-        z-index: 2;
+        border-radius: 15px;
+        border: 3px solid var(--smooth-light-blue);
+        transition: all 0.7s ease;
+      }
 
-        img {
-            width: 100px;
+      &.remote-connected {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+        margin-bottom: 28px;
+        margin-right: 14px;
+
+        @include screen(768px) {
+          height: 40%;
+          border: none;
         }
 
-        .e2e-box {
-            @include flex-center(row, center, center);
-            gap: 4px;
-            color: #A4A4A4;
-            font-size: 12px;
+        @include screen(768px) {
+          @include flex-center(row, center, center);
+          margin: 0;
         }
+
+        video {
+          height: 130px;
+          width: max-content;
+          position: absolute;
+          bottom: 7px;
+
+          @include screen(768px) {
+            position: initial;
+            bottom: 0px;
+            height: 80%;
+          }
+        }
+      }
     }
 
-    .user-and-call-time-box {
+    .other-camera-box {
+      margin-top: 15px;
+      position: absolute;
+      width: 100%;
+      height: max-content;
+      @include flex-center(row, center, center);
+
+      @include screen(768px) {
+        position: initial;
+        height: 60%;
+      }
+
+      video {
         width: 100%;
-        @include flex-center(column, center, center);
-        gap: 6px;
+        max-width: 100%;
+        max-height: 400px;
+        border-radius: 20px;
+        border: 4px solid var(--smooth-light-blue);
+        object-fit: cover;
+
+        @include screen(768px) {
+          position: initial;
+
+          max-width: 70%;
+          max-height: 100%;
+        }
+      }
+
+      .user-info {
+        @include flex-center(row, flex-start, center);
+        gap: 10px;
+        background-color: rgba(41, 41, 41, 0.373);
+        padding: 5px;
+        padding-right: 20px;
+        padding-left: 7px;
+        border-radius: 30px;
+        position: absolute;
+        top: 20px;
+        width: max-content;
+        left: 20px;
+        color: white;
+
+        @include screen(768px) {
+          display: none;
+        }
 
         img {
-            width: 90px;
-            height: 90px;
-            border-radius: 50%;
-            object-fit: cover;
-            transition: all 0.7s ease;
+          height: 50px;
+          width: 50px;
+          border-radius: 50%;
+          object-fit: cover;
         }
 
         p {
-            color: var(--blue);
-            font-size: 20px;
-            font-weight: 700;
+          font-size: 15px;
         }
+      }
+    }
+  }
 
+  .video-call-time-status {
+    margin: 16px 0px 12px 0px;
+    color: var(--text-input-gray);
+    z-index: 20;
+  }
 
-        span {
-            color: var(--text-input-gray);
-            font-size: 15px;
-        }
+  .call-option-buttons {
+    @include flex-center(row, space-between, center);
+    padding: 10px 15px;
+    background: var(--smooth-light-blue);
+    border-radius: 40px;
+    width: 370px;
+    z-index: 2;
 
-        &.cameraCall {
-            img {
-                width: 70px;
-                height: 70px;
-            }
-
-            p {
-                font-size: 19px;
-            }
-
-            span {
-                font-size: 14px;
-            }
-        }
+    @include screen(768px) {
+      width: 330px;
     }
 
-    .camera-bar {
-        width: 96%;
-        height: 100%;
-        @include flex-center(row, center, center);
-        position: relative;
-        flex-grow: 1;
-        min-height: 20%;
-
-        @include screen(768px) {
-            @include flex-center(column, center, space-between);
-            width: 100%;
-            flex: 1;
-        }
-
-        &.only-voice-call {
-            height: 0%;
-            display: none;
-        }
-
-        .device-camera-box {
-            width: 65%;
-            border-radius: 40px;
-            z-index: 3;
-            opacity: 0;
-            animation: fadeIn 1.5s ease-in-out forwards;
-            height: auto;
-
-            video {
-                height: 100%;
-                width: 100%;
-                border-radius: 15px;
-                border: 3px solid var(--smooth-light-blue);
-                transition: all 0.7s ease;
-
-
-            }
-
-            &.remote-connected {
-                width: 100%;
-                display: flex;
-                justify-content: flex-end;
-                align-items: flex-end;
-                margin-bottom: 28px;
-                margin-right: 14px;
-
-
-                @include screen(768px) {
-                    height: 40%;
-                    border: none;
-                }
-
-                @include screen(768px) {
-                    @include flex-center(row, center, center);
-                    margin: 0;
-                }
-
-                video {
-                    height: 130px;
-                    width: max-content;
-                    position: absolute;
-                    bottom: 7px;
-
-                    @include screen(768px) {
-                        position: initial;
-                        bottom: 0px;
-                        height: 80%;
-                    }
-                }
-            }
-        }
-
-        .other-camera-box {
-            margin-top: 15px;
-            position: absolute;
-            width: 100%;
-            height: max-content;
-            @include flex-center(row, center, center);
-
-            @include screen(768px) {
-                position: initial;
-                height: 60%
-            }
-
-            video {
-                width: 100%;
-                max-width: 100%;
-                max-height: 400px;
-                border-radius: 20px;
-                border: 4px solid var(--smooth-light-blue);
-                object-fit: cover;
-
-                @include screen(768px) {
-                    position: initial;
-
-                    max-width: 70%;
-                    max-height: 100%;
-                }
-            }
-
-            .user-info {
-                @include flex-center(row, flex-start, center);
-                gap: 10px;
-                background-color: rgba(41, 41, 41, 0.373);
-                padding: 5px;
-                padding-right: 20px;
-                padding-left: 7px;
-                border-radius: 30px;
-                position: absolute;
-                top: 20px;
-                width: max-content;
-                left: 20px;
-                color: white;
-
-                @include screen(768px) {
-                    display: none;
-                }
-
-                img {
-                    height: 50px;
-                    width: 50px;
-                    border-radius: 50%;
-                    object-fit: cover;
-                }
-
-                p {
-                    font-size: 15px;
-                }
-            }
-        }
+    @include screen(342px) {
+      width: 300px;
     }
 
-    .video-call-time-status {
-        margin: 16px 0px 12px 0px;
-        color: var(--text-input-gray);
-        z-index: 20;
+    button {
+      @include flex-center(row, center, center);
+      border-radius: 50%;
+      width: 45px;
+      height: 45px;
+      background: var(--text-white);
+      font-size: 22px;
+      color: var(--blue);
+
+      &:last-child {
+        background: var(--smooth-red);
+        color: white;
+      }
     }
 
-    .call-option-buttons {
-        @include flex-center(row, space-between, center);
-        padding: 10px 15px;
-        background: var(--smooth-light-blue);
-        border-radius: 40px;
-        width: 370px;
-        z-index: 2;
-
-
-        @include screen(768px) {
-            width: 330px;
-        }
-
-        @include screen(342px) {
-            width: 300px;
-        }
-
-
-        button {
-            @include flex-center(row, center, center);
-            border-radius: 50%;
-            width: 45px;
-            height: 45px;
-            background: var(--text-white);
-            font-size: 22px;
-            color: var(--blue);
-
-            &:last-child {
-                background: var(--smooth-red);
-                color: white;
-            }
-        }
-
-        .disabled {
-            color: #C8C9F7;
-        }
+    .disabled {
+      color: #c8c9f7;
     }
+  }
 }
 
 @keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
+  from {
+    opacity: 0;
+  }
 
-    to {
-        opacity: 1;
-    }
+  to {
+    opacity: 1;
+  }
 }
 
 .simulate-connection {
-    position: fixed;
-    bottom: 2px;
+  position: fixed;
+  bottom: 2px;
 }
