--- a/src/components/Chats/Components/NewChat/style.scss
+++ b/src/components/Chats/Components/NewChat/style.scss
@@ -1,166 +1,162 @@
 @use "../../../../shared/styles/main.scss" as *;
 
 .new-chat-modal {
-    width: 500px;
+  width: 500px;
+
+  @include screen(768px) {
+    width: 100%;
+    height: auto;
+  }
+
+  .title-and-input-bar {
+    .title-box {
+      @include flex-center(row, flex-start, center);
+      border-bottom: 2px solid var(--smooth-blue-hover);
+      gap: 10px;
+      padding-bottom: 15px;
+
+      p {
+        color: var(--blue);
+        font-weight: 700;
+        font-size: 16px;
+      }
+    }
+
+    .search-user-input-box {
+      margin: 15px 0px;
+      @include flex-center(row, flex-start, center);
+      gap: 10px;
+      color: var(--text-dark-gray);
+
+      .icon {
+        font-size: 25px;
+      }
+
+      input {
+        width: 100%;
+        font-size: 15px;
+      }
+    }
+  }
+
+  .user-list-box {
+    margin-top: 25px;
+    display: flex;
 
     @include screen(768px) {
+      width: 100%;
+      height: 100%;
+    }
+
+    &.active {
+      display: block;
+    }
+
+    .result-number-box {
+      @include flex-center(row, flex-start, center);
+      padding-left: 3px;
+      gap: 10px;
+      color: var(--blue);
+
+      .icon {
+        font-size: 20px;
+      }
+
+      p {
+        font-size: 13px;
+        font-weight: 700;
+      }
+    }
+
+    .users-box {
+      @include flex-center(column, flex-start, center);
+      gap: 5px;
+      margin-top: 15px;
+      height: 250px;
+      padding-right: 15px;
+      overflow: auto;
+      transition: height 0.3s ease;
+
+      @include screen(768px) {
         width: 100%;
         height: auto;
-    }
+      }
 
-    .title-and-input-bar {
-        .title-box {
-            @include flex-center(row, flex-start, center);
-            border-bottom: 2px solid var(--smooth-blue-hover);
-            gap: 10px;
-            padding-bottom: 15px;
-
-            p {
-                color: var(--blue);
-                font-weight: 700;
-                font-size: 16px;
-            }
-        }
-
-        .search-user-input-box {
-            margin: 15px 0px;
-            @include flex-center(row, flex-start, center);
-            gap: 10px;
-            color: var(--text-dark-gray);
-
-            .icon {
-                font-size: 25px;
-
-            }
-
-            input {
-                width: 100%;
-                font-size: 15px;
-            }
-        }
-    }
-
-    .user-list-box {
-        margin-top: 25px;
-        display: flex;
-
-        @include screen(768px) {
-            width: 100%;
-            height: 100%
-        }
-
-        &.active {
-            display: block;
-        }
-
-        .result-number-box {
-            @include flex-center(row, flex-start, center);
-            padding-left: 3px;
-            gap: 10px;
-            color: var(--blue);
-
-            .icon {
-                font-size: 20px;
-            }
-
-            p {
-                font-size: 13px;
-                font-weight: 700;
-            }
-        }
-
-        .users-box {
-            @include flex-center(column, flex-start, center);
-            gap: 5px;
-            margin-top: 15px;
-            height: 250px;
-            padding-right: 15px;
-            overflow: auto;
-            transition: height 0.3s ease;
-
-
-            @include screen(768px) {
-                width: 100%;
-                height: auto;
-            }
-
-            .user-box {
-                @include flex-center(row, flex-start, center);
-                width: 100%;
-                gap: 10px;
-                padding: 8px 10px;
-                border-radius: 100px;
-                @include transition();
-                cursor: pointer;
-
-                &:hover {
-                    background-color: var(--smooth-light-blue);
-                }
-
-                img {
-                    width: 52px;
-                    height: 52px;
-                    object-fit: cover;
-                    border-radius: 50%;
-                    border: 2px solid var(--smooth-blue-hover);
-                }
-
-                .default-profile-image {
-                    width: 52px;
-                    height: 52px;
-                    border-radius: 50%;
-                    @include flex-center(row, center, center);
-                    font-size: 15px;
-                    background-color: var(--smooth-blue)
-                }
-
-                .user-info {
-                    @include flex-center(column, center, flex-start);
-
-                    p,
-                    span {
-                        width: 100%;
-                        white-space: nowrap;
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                    }
-
-                    p {
-                        color: var(--text-black);
-                        font-size: 15px;
-                        font-weight: 700;
-                        line-height: 24px;
-                    }
-
-                    span {
-                        color: var(--text-input-gray);
-                        font-size: 13px;
-
-                    }
-                }
-            }
-        }
-    }
-
-    .no-result-box {
-        margin-top: 20px;
+      .user-box {
         @include flex-center(row, flex-start, center);
-        display: none;
-        gap: 8px;
-        color: var(--text-dark-gray);
+        width: 100%;
+        gap: 10px;
+        padding: 8px 10px;
+        border-radius: 100px;
+        @include transition();
+        cursor: pointer;
 
-        &.active {
-            display: flex;
+        &:hover {
+          background-color: var(--smooth-light-blue);
         }
 
-        .icon {
-            font-size: 22px;
+        img {
+          width: 52px;
+          height: 52px;
+          object-fit: cover;
+          border-radius: 50%;
+          border: 2px solid var(--smooth-blue-hover);
         }
 
-        p {
-            font-size: 13px;
+        .default-profile-image {
+          width: 52px;
+          height: 52px;
+          border-radius: 50%;
+          @include flex-center(row, center, center);
+          font-size: 15px;
+          background-color: var(--smooth-blue);
+        }
+
+        .user-info {
+          @include flex-center(column, center, flex-start);
+
+          p,
+          span {
+            width: 100%;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+
+          p {
+            color: var(--text-black);
+            font-size: 15px;
             font-weight: 700;
-        }
+            line-height: 24px;
+          }
 
+          span {
+            color: var(--text-input-gray);
+            font-size: 13px;
+          }
+        }
+      }
     }
+  }
+
+  .no-result-box {
+    margin-top: 20px;
+    @include flex-center(row, flex-start, center);
+    display: none;
+    gap: 8px;
+    color: var(--text-dark-gray);
+
+    &.active {
+      display: flex;
+    }
+
+    .icon {
+      font-size: 22px;
+    }
+
+    p {
+      font-size: 13px;
+      font-weight: 700;
+    }
+  }
 }
